# transcriber

./: .gitignore  LICENSE  README.md  audio.py  config.py  hotkey.py  main.py  paste.py  pyproject.toml  run.py  transcriber.py
static/: app.js  index.html  style.css
